I HAVE RED SQUARE!!!

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-web = "3"
+kafka = "0.8"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+png = "0.16.8"
